--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -44,6 +45,27 @@ img {
 .top h1 {
   font-size: 3.4em;
   font-weight: 300;
+  margin: 35px;
+}
+
+.top button {
+  background: transparent;
+  border: 1px solid white;
+  color: white;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: 100;
+  outline: none;
+  padding: 20px;
+  text-decoration: none;
+}
+
+.top button:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.top button:active {
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .bottom h2 {
